src/app/pages/register/register.component.scss
* {
  margin: 0px;
}

.container {
  background-color: #1e1e1e;
  min-height: 100vh;
  width: 100vw;

  h1 {
    color: white;
    margin-block: 2rem;
    display: inline-block;
  }

  .register-container {
    // height: 500px;
    background-color: #ffffff !important;
    border-radius: 30px;
    padding: 2rem;

    .container-type-person {
      margin-bottom: 29px;
      display: flex;
      align-items: center;
      gap: 1rem;
    }

    .container-inputs {
      display: flex;
      flex-wrap: wrap;
      gap: 30px;

      .input_container {
        flex: 1 0 46%;
      }

      @media (max-width: 768px) {
        .input_container {
          flex: 1 0 100%;
        }
      }
    }

    .container-button {
      display: flex;
      align-items: center;
      justify-content: flex-end;
      margin-top: 42px;

      .button {
        flex: 1 0 46%;
        max-width: 46%;
      }
    }
  }
}

.cuca {
  max-width: 1200px;
  margin: 0 auto;
  padding: 2rem;
}

